feat: ts-axios request handler

--- a/source/_posts/2019-09-03-基于ts重构axios.md
+++ b/source/_posts/2019-09-03-基于ts重构axios.md
@@ -28,3 +28,210 @@ axios js库：
 ## 基本语法
 
 [点我](http://laibh.top/2018-11-28-TypeScript.html)
+
+## 需求分析
+
+### Features
+
+- 在浏览器使用 XMLHttpRequest 对象通讯
+- 支持 Promise API
+- 支持请求和响应的拦截器
+- 支持请求数据和响应数据的转换
+- 支持请求的取消
+- JSON数据的自动转换
+- 客户端防止 XSRF
+
+## 基于 XMLHttpRequest 编写基本请求代码
+
+### 处理请求数据：url/body/headers
+
+**src/types/index.ts**
+
+```tsx
+export type Method = 'get' | 'GET' | 'delete' | 'Delete' | 'head' | 'HEAD' | 'options' | 'OPTIONS' | 'post' | 'POST' | 'put' | 'PUT' | 'patch' | 'PATCH'
+export interface AxiosRequestConfig {
+  url: string
+  method?: Method
+  data?: any
+  params?: any
+  headers?: any
+}
+```
+
+**src/xhr.ts**
+
+```tsx
+import { AxiosRequestConfig } from './types'
+
+export default function xhr(config: AxiosRequestConfig): void {
+  const { data = null, url, method = 'get', headers } = config
+  const request = new XMLHttpRequest()
+  // method,url,async
+  request.open(method.toUpperCase(), url, true)
+  Object.keys(headers).forEach(name => {
+    if (data === null && name.toLowerCase() === 'content-type') {
+      delete headers[name]
+    } else {
+      request.setRequestHeader(name, headers[name])
+    }
+  })
+  request.send(data)
+}
+
+```
+
+**src/index.ts**
+
+```tsx
+import { AxiosRequestConfig } from './types'
+import { buildURL } from './helpers/url';
+import { transformRequest } from './helpers/data';
+import xhr from './xhr'
+import { processHeaders } from './helpers/header';
+
+function axios(config: AxiosRequestConfig): void {
+  processConfig(config)
+  xhr(config)
+}
+
+function processConfig(config: AxiosRequestConfig): void {
+  config.url = transformURL(config)
+  config.data = transformRequestData(config)
+  config.headers = transformHeaders(config)
+}
+
+function transformHeaders(config: AxiosRequestConfig): void {
+  const { headers = {}, data } = config
+  return processHeaders(headers, data)
+}
+
+function transformRequestData(config: AxiosRequestConfig): void {
+  return transformRequest(config.data)
+}
+
+function transformURL(config: AxiosRequestConfig): string {
+  const { url, params } = config;
+  return buildURL(url, params)
+}
+
+export default axios
+```
+
+#### 工具类
+
+**data.ts**
+
+```tsx
+import { isPlainObject } from "./util";
+
+export function transformRequest(data: any): any {
+  if (isPlainObject(data)) {
+    return JSON.stringify(data)
+  }
+  return data
+}
+```
+
+**headers.ts**
+
+```tsx
+import { isPlainObject } from "./util"
+
+function normalizeHeaderName(headers: any, normalizedName: string): void {
+  if (!headers) {
+    return
+  }
+  Object.keys(headers).forEach(name => {
+    if (name !== normalizedName && name.toUpperCase() === normalizedName.toUpperCase()) {
+      headers[normalizedName] = headers[name]
+      delete headers[name]
+    }
+  })
+}
+
+export function processHeaders(headers: any, data: any): any {
+  normalizeHeaderName(headers, 'Content-Type')
+  if (isPlainObject(data)) {
+    if (headers && !headers['Content-Type']) {
+      headers['Content-Type'] = 'application/json;charset=utf-8'
+    }
+  }
+  return headers
+}
+```
+
+**url.ts**
+
+```tsx
+import { isDate, isPlainObject } from './util'
+
+function encode(val: string): string {
+  return encodeURIComponent(val)
+    .replace(/%40/g, '@')
+    .replace(/%3A/ig, ':')
+    .replace(/%24/g, '$')
+    .replace(/%2C/ig, ',')
+    .replace(/%20/g, '+')
+    .replace(/%5B/ig, '[')
+    .replace(/%5D/ig, ']')
+}
+
+export function buildURL(url: string, params?: any): string {
+  if (!params) {
+    return url
+  }
+  const parts: string[] = []
+  Object.keys(params).forEach(key => {
+    const val = params[key]
+    if (val === null || typeof val === 'undefined') {
+      return
+    }
+    let values = []
+    if (Array.isArray(val)) {
+      values = val
+      key += '[]'
+    } else {
+      values = [val]
+    }
+    values.forEach(val => {
+      if (isDate(val)) {
+        val = val.toISOString()
+      } else if (isPlainObject(val)) {
+        val = JSON.stringify(val)
+      }
+      parts.push(`${encode(key)}=${encode(val)}`)
+    })
+  })
+  let serializedParams = parts.join('&')
+  if (serializedParams) {
+    const markIndex = url.indexOf('#')
+    if (markIndex !== -1) {
+      url = url.slice(0, markIndex)
+    }
+    url += (url.indexOf('?') === -1 ? '?' : '&') + serializedParams
+  }
+  return url
+}
+```
+
+**util.ts**
+
+```tsx
+const toString = Object.prototype.toString
+
+export function isDate(val: any): val is Date {
+  return toString.call(val) === '[object Date]'
+}
+
+export function isPlainObject(val: any): val is Object {
+  return toString.call(val) === '[object Object]'
+}
+
+```
+
+### 处理响应数据
+
+
+
+
+
