--- a/source/_posts/2019-09-03-基于ts重构axios.md
+++ b/source/_posts/2019-09-03-基于ts重构axios.md
@@ -3,7 +3,9 @@ title: 基于ts重构axios
 date: 2019-09-03  14:19:54
 tags: TypeScript
 categories: 
-	- TypeScript
+
+  + TypeScript
+
 ---
 
 # 基于ts重构axios
@@ -14,16 +16,14 @@ categories:
 
 TypeScript 常用语法：
 
-`基础类型`、`函数`、`变量声明`、`接口`、`类`、`泛型`、`类型推新`、`高级类型`
+`基础类型` 、 `函数` 、 `变量声明` 、 `接口` 、 `类` 、 `泛型` 、 `类型推新` 、 `高级类型` 
 
 axios js库：
 
-`项目脚手架`、`基础功能实现`、`异常情况处理`、`接口扩展`、`拦截器实现`、`配置化实现`、`取消功能实现`、`其他功能实现等等`
+`项目脚手架` 、 `基础功能实现` 、 `异常情况处理` 、 `接口扩展` 、 `拦截器实现` 、 `配置化实现` 、 `取消功能实现` 、 `其他功能实现等等` 
 
 主要工具：
-`Jest`、`TSLint`、`Commitizen`、`Prettier`、`RollupJS`、`Semantic release`
-
-
+`Jest` 、 `TSLint` 、 `Commitizen` 、 `Prettier` 、 `RollupJS` 、 `Semantic release` 
 
 ## 基本语法
 
@@ -33,13 +33,13 @@ axios js库：
 
 ### Features
 
-- 在浏览器使用 XMLHttpRequest 对象通讯
-- 支持 Promise API
-- 支持请求和响应的拦截器
-- 支持请求数据和响应数据的转换
-- 支持请求的取消
-- JSON数据的自动转换
-- 客户端防止 XSRF
+* 在浏览器使用 XMLHttpRequest 对象通讯
+* 支持 Promise API
+* 支持请求和响应的拦截器
+* 支持请求数据和响应数据的转换
+* 支持请求的取消
+* JSON数据的自动转换
+* 客户端防止 XSRF
 
 ## 基于 XMLHttpRequest 编写基本请求代码
 
@@ -47,7 +47,7 @@ axios js库：
 
 **src/types/index.ts**
 
-```tsx
+``` tsx
 export type Method = 'get' | 'GET' | 'delete' | 'Delete' | 'head' | 'HEAD' | 'options' | 'OPTIONS' | 'post' | 'POST' | 'put' | 'PUT' | 'patch' | 'PATCH'
 export interface AxiosRequestConfig {
   url: string
@@ -60,7 +60,7 @@ export interface AxiosRequestConfig {
 
 **src/xhr.ts**
 
-```tsx
+``` tsx
 import { AxiosRequestConfig } from './types'
 
 export default function xhr(config: AxiosRequestConfig): void {
@@ -82,7 +82,7 @@ export default function xhr(config: AxiosRequestConfig): void {
 
 **src/index.ts**
 
-```tsx
+``` tsx
 import { AxiosRequestConfig } from './types'
 import { buildURL } from './helpers/url';
 import { transformRequest } from './helpers/data';
@@ -121,7 +121,7 @@ export default axios
 
 **data.ts**
 
-```tsx
+``` tsx
 import { isPlainObject } from "./util";
 
 export function transformRequest(data: any): any {
@@ -134,7 +134,7 @@ export function transformRequest(data: any): any {
 
 **headers.ts**
 
-```tsx
+``` tsx
 import { isPlainObject } from "./util"
 
 function normalizeHeaderName(headers: any, normalizedName: string): void {
@@ -162,59 +162,14 @@ export function processHeaders(headers: any, data: any): any {
 
 **url.ts**
 
-```tsx
+``` tsx
 import { isDate, isPlainObject } from './util'
 
 function encode(val: string): string {
   return encodeURIComponent(val)
     .replace(/%40/g, '@')
     .replace(/%3A/ig, ':')
-    .replace(/%24/g, '$')
-    .replace(/%2C/ig, ',')
-    .replace(/%20/g, '+')
-    .replace(/%5B/ig, '[')
-    .replace(/%5D/ig, ']')
-}
-
-export function buildURL(url: string, params?: any): string {
-  if (!params) {
-    return url
-  }
-  const parts: string[] = []
-  Object.keys(params).forEach(key => {
-    const val = params[key]
-    if (val === null || typeof val === 'undefined') {
-      return
-    }
-    let values = []
-    if (Array.isArray(val)) {
-      values = val
-      key += '[]'
-    } else {
-      values = [val]
-    }
-    values.forEach(val => {
-      if (isDate(val)) {
-        val = val.toISOString()
-      } else if (isPlainObject(val)) {
-        val = JSON.stringify(val)
-      }
-      parts.push(`${encode(key)}=${encode(val)}`)
-    })
-  })
-  let serializedParams = parts.join('&')
-  if (serializedParams) {
-    const markIndex = url.indexOf('#')
-    if (markIndex !== -1) {
-      url = url.slice(0, markIndex)
-    }
-    url += (url.indexOf('?') === -1 ? '?' : '&') + serializedParams
-  }
-  return url
-}
-```
-
-**util.ts**
+    .replace(/%24/g, '**util.ts**
 
 ```tsx
 const toString = Object.prototype.toString
@@ -235,7 +190,7 @@ export function isPlainObject(val: any): val is Object {
 
 **types/index**
 
-```ts
+``` ts
 export interface AxiosResponse {
   data: any
   status: number
@@ -253,7 +208,7 @@ export interface AxiosPromise extends Promise<AxiosResponse> {
 
 **helpers/header.ts**
 
-```tsx
+``` tsx
 export function processHeaders(headers: any, data: any): any {
   normalizeHeaderName(headers, 'Content-Type')
   if (isPlainObject(data)) {
@@ -288,7 +243,7 @@ export function parseHeaders(headers: string): any {
 
 **helpers/data.ts**
 
-```tsx
+``` tsx
 export function transformResponse(data: any): any {
   if (typeof data === 'string') {
     try {
@@ -301,11 +256,203 @@ export function transformResponse(data: any): any {
 }
 ```
 
-修改 xhr,返回一个 Promise
+修改 xhr, 返回一个 Promise
 
 **xhr.ts**
 
+``` tsx
+import { AxiosRequestConfig, AxiosPromise, AxiosResponse } from './types'
+import { parseHeaders } from './helpers/headers'
+
+export default function xhr(config: AxiosRequestConfig): AxiosPromise {
+  return new Promise(resolve => {
+    const { data = null, url, method = 'get', headers, responseType } = config
+    const request = new XMLHttpRequest()
+    if (responseType) {
+      request.responseType = responseType
+    }
+    // method,url,async
+    request.open(method.toUpperCase(), url, true)
+
+    request.onreadystatechange = function handleLoad() {
+      if (request.readyState !== 4) {
+        return
+      }
+
+      const responseHeaders = parseHeaders(request.getAllResponseHeaders())
+      const responseData = responseType && responseType !== 'text' ? request.response : request.responseText
+      const response: AxiosResponse = {
+        data: responseData,
+        status: request.status,
+        statusText: request.statusText,
+        headers: responseHeaders,
+        config,
+        request
+      }
+      resolve(response)
+    }
+    Object.keys(headers).forEach(name => {
+      if (data === null && name.toLowerCase() === 'content-type') {
+        delete headers[name]
+      } else {
+        request.setRequestHeader(name, headers[name])
+      }
+    })
+    request.send(data)
+  })
+
+}
+
+```
+
+[具体代码地址](https://github.com/LbhFront-end/ts-axios)
+
+)
+
+    .replace(/%2C/ig, ',')
+    .replace(/%20/g, '+')
+    .replace(/%5B/ig, '[')
+    .replace(/%5D/ig, ']')
+
+}
+
+export function buildURL(url: string, params?: any): string {
+  if (!params) {
+
+    return url
+
+  }
+  const parts: string[] = []
+  Object.keys(params).forEach(key => {
+
+    const val = params[key]
+    if (val === null || typeof val === 'undefined') {
+      return
+    }
+    let values = []
+    if (Array.isArray(val)) {
+      values = val
+      key += '[]'
+    } else {
+      values = [val]
+    }
+    values.forEach(val => {
+      if (isDate(val)) {
+        val = val.toISOString()
+      } else if (isPlainObject(val)) {
+        val = JSON.stringify(val)
+      }
+      parts.push( `${encode(key)}=${encode(val)}` )
+    })
+
+  })
+  let serializedParams = parts.join('&')
+  if (serializedParams) {
+
+    const markIndex = url.indexOf('#')
+    if (markIndex !== -1) {
+      url = url.slice(0, markIndex)
+    }
+    url += (url.indexOf('?') === -1 ? '?' : '&') + serializedParams
+
+  }
+  return url
+}
+
+``` 
+
+**util.ts**
+
 ```tsx
+const toString = Object.prototype.toString
+
+export function isDate(val: any): val is Date {
+  return toString.call(val) === '[object Date]'
+}
+
+export function isPlainObject(val: any): val is Object {
+  return toString.call(val) === '[object Object]'
+}
+
+```
+
+### 处理响应数据
+
+定义响应接口
+
+**types/index**
+
+``` ts
+export interface AxiosResponse {
+  data: any
+  status: number
+  statusText: string
+  headers: any
+  config: AxiosRequestConfig
+  request: any
+}
+export interface AxiosPromise extends Promise<AxiosResponse> {
+
+}
+```
+
+处理 headers 的数据
+
+**helpers/header.ts**
+
+``` tsx
+export function processHeaders(headers: any, data: any): any {
+  normalizeHeaderName(headers, 'Content-Type')
+  if (isPlainObject(data)) {
+    if (headers && !headers['Content-Type']) {
+      headers['Content-Type'] = 'application/json;charset=utf-8'
+    }
+  }
+  return headers
+}
+
+export function parseHeaders(headers: string): any {
+  let parsed = Object.create(null)
+  if (!headers) {
+    return headers
+  }
+  headers.split('\r\n').forEach(line => {
+    let [key, val] = line.split(':')
+    key = key.trim().toLowerCase()
+    if (!key) {
+      return
+    }
+    if (val) {
+      val = val.trim();
+    }
+    parsed[key] = val
+  })
+  return parsed
+}
+```
+
+处理 响应data
+
+**helpers/data.ts**
+
+``` tsx
+export function transformResponse(data: any): any {
+  if (typeof data === 'string') {
+    try {
+      data = JSON.parse(data)
+    } catch (e) {
+      // do nothing
+    }
+  }
+  return data
+}
+```
+
+修改 xhr, 返回一个 Promise
+
+**xhr.ts**
+
+``` tsx
 import { AxiosRequestConfig, AxiosPromise, AxiosResponse } from './types'
 import { parseHeaders } from './helpers/headers'
 
