doc: add react hooks and modified ts-axuis tag

--- a/source/_posts/2019-09-03-基于ts重构axios.md
+++ b/source/_posts/2019-09-03-基于ts重构axios.md
@@ -3,8 +3,7 @@ title: 基于ts重构axios
 date: 2019-09-03  14:19:54
 tags: TypeScript
 categories: 
-
-  + TypeScript
+  - TypeScript
 
 ---
 
@@ -171,7 +170,7 @@ function encode(val: string): string {
     .replace(/%3A/ig, ':')
     .replace(/%24/g, '**util.ts**
 
-```tsx
+​```tsx
 const toString = Object.prototype.toString
 
 export function isDate(val: any): val is Date {
@@ -363,7 +362,7 @@ export function buildURL(url: string, params?: any): string {
 
 **util.ts**
 
-```tsx
+​```tsx
 const toString = Object.prototype.toString
 
 export function isDate(val: any): val is Date {
