feat: add stream code analyse

--- a/source/_posts/2020-06-19-NodeJS回顾.md
+++ b/source/_posts/2020-06-19-NodeJS回顾.md
@@ -1168,9 +1168,448 @@ Stream.protptype.pipe = function(dest,options){
 }
 ```
 
+## /lib/internal/streams/legacy.js模块实现分析
 
+### 声明构造函数Stream
 
+声明构造函数Stream继承于事件events,此时就拥有了events在原型定义的属性，例如on/emit等方法
 
+```javascript
+const {ObjectSetPrototypeOf} = primordials;
+
+const EE = require('events');
+
+function Stream(opts){
+    EE.call(this,opts)
+}
+ObjectSetPrototypeOf(Stream.prototype,EE.prototype);
+ObjectSetPrototypeOf(Stream,EE)
+```
+
+### 声明pipe方法，订阅data事件
+
+在Stream原型上声明pipe方法，订阅data事件，source为可读流对象，dest为可写流对象
+
+在使用pipe方法的时候也是监听的data事件，一边读取数据一边写入数据
+
+ondata方法的几个API：
+
+- dest.writable：如果调用writable.write()是安全的，则为true
+- dest.write(chunk)：接收chunk写入数据，如果内部的缓冲小于内部创建流时配置的highWaterMark，则返回true,否则返回false时应该停止向流写入数据，知道drain事件被触发。
+- source.pause()：可读流会停止data事件，意味着此时暂停数据写入了
+
+```javascript
+Stream.prototype.pipe = function(dest,options){
+    const source = this;
+    function ondata(chunk){
+        if(dest.writable && dest.write(chunk) === false && source.pause){
+            source.pause();
+        }
+    }
+    source.on('data',ondata)
+}
+```
+
+### 订阅drain事件
+
+如果调用dest.write(chunk)返回false,就会调用source.pause()停止数据流动，继续写入事件到流时会触发drain事件，ondrain方法的几个API：
+
+- source.readable：如果可以安全地调用readable.read()，则为true,例如数据未读到末尾，则会返回true，表示可读的。
+- source.resume()：将被暂停的可读流恢复触发data事件，并将流切换流动模式
+
+```javascript
+Stream.prototype.pipe = function(dest,options){
+    function ondrain(){
+        if(source.readable && source.resume){
+            source.resume();
+        }
+    }
+    dest.on('drain',ondrain)
+}
+```
+
+### 选项指定end属性，订阅end,close事件
+
+```javascript
+// 如果end选项没有被提供，可读流订阅end或者close事件，后续将会触发该事件，指定dest.end方法，仅被调用一次，didOnEnd变量做了控制，主要是为了关闭可写流的id
+// close:当流或者底层资源（比如文件描述符）被关闭时触发close事件
+// end: 当可读流中没有数据可供消费的时候触发
+// 可读流的end,destroy方法
+// dest.end() 表明已经没有数据要被写入可写流，进行关闭，之后再调用stream.write会导致错误
+// dest.destory() 销毁流
+Stream.prototype.pipe = function(dest,options){
+    if(!dest._isStdio && (!options || options.end !== false)){
+        source.on('end',onend);
+        source.on('close',onclose);
+    }
+    let didOnEnd = false;
+    function onend(){
+        if(didOnEnd) return;
+        didOnEnd = true;
+        dest.end();
+    }
+    
+    function onclose(){
+        if(didOnEnd) return;
+        didOnEnd = true;
+        if(typeof dest.destory === 'function'){
+            dest.destroy();
+        }
+    }
+}
+```
+
+### 订阅可读流与可写流的error事件
+
+可读流、可写流发生错误时触发error事件，调用onerror方法，首先移除可读流，可写流订阅的所有事件
+
+```javascript
+Stream.prototype.pipe = function(){
+    function onerror(er){
+        cleanup();
+        if(EE.listenerCount(this,'error') == 0){
+            throw er;
+        }
+    }
+    
+    source.on('error',onerror);
+    dest.on('error',onerror);
+    
+    function cleanup(){
+        source.removeListener('data',ondata);
+        dest.removeListener('drain',ondrain);
+        
+        source.removeListener('end',onend);
+        source.removelistener('close',onclose);
+        
+        source.removeListener('error',onerror);
+        dest.removelistener('error',onerror);
+        
+        source.removeListener('end',cleanup);
+        source.removelistener('close',cleanup);     
+        
+        dest.removelistener('close',cleanup);        
+    }
+}
+```
+
+### 触发pipe事件
+
+在pipe方法里面最后还会触发一个pipe事件，传入可读流对象
+
+```javascript
+Stream.prototype.pipe = function(dest,options){
+    const source = this;
+    dest.emit('pipe',source);
+}
+```
+
+### 支持链式调用
+
+最后返回dest,支持`A.pipe(B).pipe(c)`的写法：
+
+```javascript
+Stream.prototype.pipe = function(dest,options){
+    return dest;
+}
+```
+
+## util.promisify如何将Callback转换为Promise
+
+util模块提供了很多工具函数，其中promisify方法可以将callback转换为Promise对象，解决回调地狱的问题。
+
+### 简单实现版本
+
+#### util promisify基本使用
+
+将callback转为promise对象，首先确保这个callback为一个错误优先的回调函数，即`(err,value)=>err`指定一个错误参数，value为返回值
+
+```javascript
+// 创建一个text.txt文件，写入一些自定义内容，使用fs.readFile来读取这个文件进行测试
+// 传统的Callback写法
+const util = require('util');
+fs.readFile('text.txt','utf8',(err,result)=>{
+    console.log('Error',err);
+    console.log('Result: ',result)
+})
+
+// Promise写法
+const {promisify} = require('util');
+const readFilePromisify = util.promisify(fs.readFile); // 转换为Promise
+
+readFilePromisify('text.txt','utf8')
+    .then(result=>console.log(result))
+    .catch(err=>console.log(err))
+```
+
+自定义mayJunPromisify函数实现
+
+自定义mayJunPromisify函数实现callback转换为promise，核心实现如下：
+
+- 校验传入的参数original是否为Function,不是则抛错
+- promisify(fs.readFile)执行之后会返回一个函数fn,定义待返回的函数后返回
+- fn返回的是一个Promise对象，在返回的Promise对象中执行callback函数
+
+```javascript
+function mayJunPromisify(original){
+    if(typeof original !== 'function'){
+        throw new Error('The "original" argument must be of type Function,Received type undefined')
+    }
+    
+    function fn(...args){
+        return new Promise((resolve,reject)=>{
+            try{
+                original.call(this,...args,(err,result)=>{
+                    if(err){
+                        reject(err)
+                    }else{
+                        resolve(result)
+                    }
+                })
+            }catch(err){
+                resolve(result)
+            }
+        })
+    }
+    return fn;
+}
+```
+
+#### util.promisify.custom基本使用
+
+另一个功能是可以使用util.promise.custom符号重写util.promisify返回值。
+
+在fs.readFile上定义util.promisify.custom符号，其功能为禁止读取文件
+
+```javascript
+// 注意顺序要在 util.promisify之前
+fs.readFile[util.promisify.custom] = ()=>{
+    return Promise.reject('该文件暂时禁止读取')
+}
+
+const readFilePromisify = util.promisify(fs.readFile);
+readFilePromisify('text.txt','utf8')
+    .then(result=>console.log(result))
+    .catch(err=>console.log(err)) // 该文件暂时禁止读取
+
+```
+
+自定义mayJunPromisify.custom实现
+
+- 定义一个Symbol变量kCustomPromisifiedSymbol赋予mayJunPromisify.custom
+- 校验是否有自定义的promise函数
+- 自定义的mayJunPromisified.custom也要保证是一个函数，否则抛错
+- 直接返回自定义的mayJunPromisify.custom函数，后续的fn函数就不会执行了，所以在这里重写util.promisify返回值
+
+```javascript
+// 所以说util.promisify.custom是一个符号
+const kCustomPromisifiedSymbol = Symbol('util,promisify.custom');
+mayJunPromisify.custom = kCustomPromisifiedSymbol;
+
+function mayJunPromisify(original){
+    if(typeof original !== 'function'){
+        throw new Error('The "original" argument must be of type Function,Received type undefined')
+    }
+    
+    if(original[kCustomPromisifiedSymbol]){
+        const fn = original[kCustomPromisifiedSymbol];
+        if(typeof fn !== 'function'){
+            throw new Error('The "mayJunPromise.custom" property must be of the type Function,Received type number')
+        }
+        return Object.defineProperty(fn,kCustomPromisifiedSymbol,{
+            value:fn,
+            enumerable:false,
+            writable:false,
+            configurable:true
+        })
+    }
+    
+    function fn(...args){}
+    return fn;
+}
+```
+
+#### util.promisify回调函数多参转换
+
+有些函数的回调形式是多个参数的，例如dns.lookup，它的回调形式是`(err,address,family)=>...`拥有 三个参数，对这种情况也做兼容
+
+基本使用：
+
+```javascript
+const dns = require('dns');
+const lookupPromisify = util.promisify(dns.lookup);
+
+lookupPromisify('laibh.top')
+    .then(({address,family})=>{
+    console.log('地址：',address,'地址族：',family)
+}).catch(err=>console.log(err))
+```
+
+实现解析：
+
+为了支持util.promisify也都会在函数上定义一个customPromisifyArgs参数，value为回调的多个参数的名称，类型为数组，例如dns.lookup绑定的customPromisifyArgs的value为`['address','family']`，其主要目的也是为了适配util.promisify
+
+dns.lookup支持util.promisify核心实现
+
+```javascript
+const {customPromisifyArgs} = require('internal/util');
+
+ObjectDefineProperty(lookup,customPromisifyArgs,{
+    value:['address','family'],
+    enumerable:false
+})
+```
+
+customPromisifyArgs这个参数是从internal/util模块导出的，仅内部调用，在外部util.promisify是没有这个参数的。也就意味着只有Node模块中例如dns.lookup、fs.read等方法在多参数的时候可以使用util.promisify转换为Promise，如果自定义的callback存在多参数的情况，使用util.promisify则不行，不过可以基于util.promisify自己封装一个：
+
+```javascript
+module.exports = {
+    // Symbol used to customize promisify conversion
+    customPromisifyArgs:kCustomPromisifyArgsSymbol
+}
+```
+
+- 定义Symbol变量kCustomPromisifyArgsSymbol
+- 获取参数名称列表
+- `(err,result)`改为`(err,...values)`,原先的result仅接受一个参数，改为`...values`接收多个参数
+- argumentNames存在且value>1,则回调会存在多个参数名称，经常遍历，返回一个obj
+- 否则values最多仅有一个参数名称，即数组values有且仅有一个元素
+
+```javascript
+const kCustomPromisifyArgsSymbol = Symbol('customPromisifyArgs');
+
+function promisify(original){
+    // 获取多个回调函数的函数参数列表
+    const argumentName = original[kCustomPromisifyArgsSymbol];
+    function fn(..args){
+        return new Promise((resolve,reject)=>{
+            try{
+                original.call(this,...args,(err,...values)=>{
+                    if(err){
+                        reject(err)
+                    }else{
+                        // argumentNames存在且values>1,则回调会存在多个参数名称，进行遍历，返回一个obj
+                        if(argumentNames !== undefined && values.length > 1){
+                            const obj = {};
+                            for(let i=0;i<argumentNames.length;i+=1){
+                                obj[argumentNames[i]] = values[i];
+                                resolve(obj)
+                            }
+                        }else{
+                            // 否则values最多只有一个参数名称，即数组values有且只有一个元素
+                            resolve(values[0])
+                        }
+                    }
+                })
+            }
+        })
+    }
+    return fn;
+}
+```
+
+#### 完整代码
+
+```javascript
+// 由于kCustomPromiseArgsSymbol使用Symbol声明（每次重新定义都会不一样），且没有对外提供。要实现这个功能，需要每次在cb重新定义kCustomPromisifyArgsSymbol属性
+
+const kCustomPromisifiedSymbol = Symbol('util.promisify.custom');
+const kCustomPromisifyArgsSymbol = Symbol('customPromisifyArgs');
+mayJunPromisify.custom = kCustomPromisifiedSymbol;
+
+function mayJunPromisify(original){
+    if(typeof original !== 'function'){
+        throw new Error('The "original" argument must be of type Function,Received type undefined')
+    }
+    
+    if(original[kCustomPromisifiesSymbol]){
+        const fn = original[kCustomPromisifiesSymbol];
+        if(typeof fn !== 'function'){
+            throw new Error('The "util.promisify.custom" property must be of type Function.Received type number')
+        }
+        return Object.defineProperty(fn,kCustomPromisifiedSymbol,{
+            value:fn,
+            enumerable:false,
+            writable:false,
+            configurable:true
+        })
+        // 获取多个回调函数的参数列表
+        const argumentNames = original[kCustomPromisifyArgsSymbol];
+        
+        function fn(...args){
+            return new Promise((resolve,reject)=>{
+                try{
+                    original.call(this,...args,(err,...values)=>{
+                        if(err){
+                            reject)(err);
+                        }else{
+                            // argumentName 存在且 values>1,则回调会存在多个参数名称，进行遍历，返回一个obj
+                            if(argumentNames !== undefined && values.length > 1){
+                                const obj = {};
+                                for(let i=0;i<argumentNames.length;i+=1){
+                                    obj[argumentNames[i]] = values[i]
+                                    resolve(obj)
+                                }
+                            }else{
+                                // 否则values最多仅有一个参数名称，即数组values有且仅有一个元素
+                                resolve(values[0])
+                            }
+                        }
+                    })
+                }catch(err){
+                    reject(err)
+                }
+            })
+        }
+    }
+}
+module.exports = {
+    mayJunPromisify,
+    kCustomPromisifyArgsSymbol
+}
+```
+
+使用：
+
+```javascript
+const {kCustomPromisifyArgsSymbol,mayJunPromisify} = require('./may-jun-promisify');
+const fs = require('fs');
+
+// mayJunPromisify.custom自定义Promise函数测试
+function promisifyCustomTest(){
+    fs.readFile[mayJunPromisify.custom]=()=>{
+        return Promise.reject('该文件暂时禁止读取')
+    }
+    const readFilePromisify = mayJunPromisify(fs.readFile);
+    readFilePromisify('text.txt','utf8')
+        .then(result=>console.log(result))
+        .catch(err=>console.log(err)))
+}
+
+// 自定义cb多参数转换promise
+function cbConverPromiseTest(){
+    function getUserById(id,cb){
+        const name = 'laibh',
+              age = 25;
+        cb(null,name,age);
+    }
+    Object.defineProperty(getUserById,kCustomPromisifyArgsSymbol,{
+        value:['name','age'],
+        enumerable:false
+    })
+    
+    const getUserByIdPromisify = mayJunPromisify(getUserById);
+    getUserByIdPromisify(1)
+        .then({name,age}=>{
+        console.log(name,age);
+    	})
+        .catch(err=>console.log(err))
+    
+    
+}
+promisifyCustomTest();
+cbConverPromiseTest();
+```
 
 
 
